--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,17 @@
 *.o
 *.d
+*.mk
 .Target-Debug
 .Target-Release
 Target-Debug
 Target-Release
 Debug-Tizen-Emulator
 Debug-Tizen-Device
+Debug
 crash-info
 DebugInfo
 FBReader.htb
 .settings
-.cproject
 .sdk_delta.info
 .rds_delta
 .sign
